# libdatrie-demo

./: .gitignore  README.md  meson.build
subprojects/: libdatrie.wrap
